// Vitest Snapshot v1

exports[`navbar > events > left-click 1`] = `
<div
  class="t-navbar t-navbar--fixed t-navbar--visible-animation"
  style="position: fixed;"
>
  <div
    class="t-navbar____placeholder"
  />
  <div
    class="t-navbar__content"
  >
    <div
      class="t-navbar__left"
    >
      <!---->
      
      <svg
        class="t-icon t-icon-app"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M2 2h9v9H2V2zm2 2v5h5V4H4zm13.5 0a2.5 2.5 0 100 5 2.5 2.5 0 000-5zM13 6.5a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM2 13h9v9H2v-9zm2 2v5h5v-5H4zm9-2h9v9h-9v-9zm2 2v5h5v-5h-5z"
          fill="currentColor"
        />
      </svg>
      
      <!---->
    </div>
    <div
      class="t-navbar__center"
    >
      <span
        class="t-navbar__center-title"
      >
        标题
      </span>
    </div>
    <!---->
  </div>
</div>
`;

exports[`navbar > events > right-click 1`] = `
<div
  class="t-navbar t-navbar--fixed t-navbar--visible-animation"
  style="position: fixed;"
>
  <div
    class="t-navbar____placeholder"
  />
  <div
    class="t-navbar__content"
  >
    <div
      class="t-navbar__left"
    >
      <!---->
      <!---->
      <!---->
    </div>
    <div
      class="t-navbar__center"
    >
      <span
        class="t-navbar__center-title"
      >
        标题
      </span>
    </div>
    <div
      class="t-navbar__right"
    >
      
      <svg
        class="t-icon t-icon-app"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M2 2h9v9H2V2zm2 2v5h5V4H4zm13.5 0a2.5 2.5 0 100 5 2.5 2.5 0 000-5zM13 6.5a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM2 13h9v9H2v-9zm2 2v5h5v-5H4zm9-2h9v9h-9v-9zm2 2v5h5v-5h-5z"
          fill="currentColor"
        />
      </svg>
      
    </div>
  </div>
</div>
`;
